--- a/seus_olhos/pubspec.yaml
+++ b/seus_olhos/pubspec.yaml
@@ -46,8 +46,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/white.png
-  #   - images/a_dot_ham.jpeg
+    - assets/help.png
+    - assets/info.png
+    - assets/blue.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
